# ESIRPV

./: .gitignore  README.md
backend/backend/: db.sqlite3
backend/backend/backend/: settings.py  urls.py
backend/backend/backend/quickstart/: admin.py  models.py  serializers.py  views.py
backend/backend/backend/quickstart/migrations/: 0001_initial.py  0002_remove_client_client_id_remove_order_price_and_more.py  0003_documents.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/service/commands/: dev.js
frontend/src/: App.vue  index.css  interfaces.ts  main.ts
frontend/src/api/: index.ts
frontend/src/components/: container.vue  formButton.vue  formInput.vue  pillButton.vue
frontend/src/hooks/: useToken.ts
frontend/src/router/: index.ts
frontend/src/stores/: main.ts
frontend/src/utils/: debug.ts  host.ts  localStorage.ts
frontend/src/views/home/: index.vue
frontend/src/views/login/: appLogin.vue
frontend/src/views/orders/: allOrders.vue
frontend/src/views/orders/ordersTile/: index.vue
rust-generate-flush-db/: Cargo.toml  jk  main  prova.sqlite
rust-generate-flush-db/src/: db.rs  document.rs  errors.rs  main.rs  order.rs  products.rs
