[package]
name = "rust-generate-flush-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barcoders = {version = "1.0.2", features = ["image"]}
chrono = "0.4.26"
genpdf = {version = "0.2.0", features = ["images"]}
image = "0.24.6"
rusqlite = { version = "0.29.0", features = ["bundled"] }
sha2 = "0.10.7"
